service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-headless
  labels:
    app: trino
    chart: trino-0.2.0
    release: tcb
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app: trino
    release: tcb
    component: coordinator

---

apiVersion: v1
kind: Service
metadata:
  name: tcb-trino
  labels:
    app: trino
    chart: trino-0.2.0
    release: tcb
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8443
      targetPort: 8443
      protocol: TCP
      name: http
  selector:
    app: trino
    release: tcb
    component: coordinator
