ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: presto1-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.org/ssl-services: "eclwatch"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  #ingressClassName: nginx
  rules:
    - host: hello-bassim.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tcb-trino
                port:
                  number: 8443
  tls:
    - hosts:
      - hello-bassim.test
      secretName: trino-tls-secret
